adding link to animate.css in head

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <meta name="description" content="[Your name here] | Developer">
 
   <!-- Required librarys -->
+
+  <!-- Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   <!-- Boostrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -57,7 +60,7 @@
         Sunt <span class="typed"></span>
       </h1>
       <p class="hero-cta" class="load-hidden">
-        <a class="cta-btn cta-btn--hero main-button" href="#about">Află mai multe</a>
+        <a class="cta-btn cta-btn--hero main-button js-scroll-to-about" href="#about">Află mai multe</a>
       </p>
     </div>
   </div>
@@ -65,7 +68,7 @@
   <!-- /END Hero Section -->
 
   <!-- **** About Section **** -->
-  <section id="about">
+  <section id="about" class="js-about">
     <div class="container">
       <h2 class="section-title">
         Despre mine
