--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 
   <!-- Required librarys -->
 
-  <!-- Animate.css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   <!-- Boostrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -35,15 +33,15 @@
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/f800768fd5.js" crossorigin="anonymous"></script>
 
+  <!-- Animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+
+
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style/main.css">
 
   <!-- ScrollReveal -->
-  <!-- See how to implement ScrollReveal -->
-  <script src="https://unpkg.com/scrollreveal"></script>
-    <script>
-      ScrollReveal({ reset: false });
-    </script>
 
 </head>
 
@@ -70,13 +68,13 @@
   <!-- **** About Section **** -->
   <section id="about" class="js-about">
     <div class="container">
-      <h2 class="section-title">
+      <h2 class="section-title wow animate__animated animate__fadeIn">
         Despre mine
       </h2>
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg" height="auto" width="150px" src="img/profile-smaller.png"
+            <img class="img-fluid rounded shadow-lg wow animate__animated animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
               alt="Profile Image" />
           </div>
         </div>
@@ -115,7 +113,7 @@
   <section id="projects">
     <div class="container">
       <div class="project-wrapper">
-        <h2 class="section-title dark-blue-text">
+        <h2 class="section-title dark-blue-text wow animate__animated animate__fadeIn">
           Proiecte
         </h2>
 
@@ -228,7 +226,7 @@
   <!-- **** Contact Section **** -->
   <section id="contact">
     <div class="container">
-      <h2 class="section-title">
+      <h2 class="section-title wow animate__animated animate__fadeIn">
         Contact
       </h2>
       <div class="grid-for-contact">
@@ -294,6 +292,9 @@
     <!-- Script pt PARTICLES JS -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
+  <!-- WOW JS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
+
   <!-- JS pentru Boostrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -307,6 +308,8 @@
 
     <!-- Script pt TILT JS | Project Images Animation -->
   <script src="./js/tilt.jquery.js"></script>
+
+  
 
   <!-- Custom JS -->
   <script src="./js/index.js"></script>
