--- a/index.html
+++ b/index.html
@@ -58,12 +58,10 @@
         Sunt <span class="typed"></span>
       </h1>
       <p class="hero-cta" class="load-hidden">
-        <a class="cta-btn cta-btn--hero main-button js-scroll-to-about" href="#about">Află mai multe</a>
+        <a class="cta-btn cta-btn--hero main-button js-scroll-to-about wow animate__animated animate__backInDown" href="#about">Află mai multe</a>
       </p>
     </div>
-  </div>
-  
-  <!-- /END Hero Section -->
+  </div> <!-- /END Hero Section -->
 
   <!-- **** About Section **** -->
   <section id="about" class="js-about">
@@ -80,7 +78,7 @@
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text">
+            <p class="about-wrapper__info-text wow animate__animated animate__pulse">
               Îmi doresc să schimbăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, și să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
             </p>
           </div>
@@ -88,7 +86,7 @@
 
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text">
+            <p class="about-wrapper__info-text wow animate__animated animate__pulse">
               Susțin <a class="tvp-refference" href="#"><kbd class="hover-pointer">Economia Bazată pe Resurse<kbd></a> propusă de <a class="tvp-refference" href="/#"><kbd class="hover-pointer">Proiectul Venus</kbd></a> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <a class="tvp-refference" href="#"><kbd class="hover-pointer">Jacque Fresco</kbd></a> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
             </p>
           </div>
@@ -106,8 +104,7 @@
 
       </div>
     </div>
-  </section>
-  <!-- /END About Section -->
+  </section> <!-- /END About Section -->
 
   <!-- **** Projects Section **** -->
   <section id="projects">
@@ -121,7 +118,7 @@
         <!-- Omul Modern -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text">
+            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">Omul Modern <br>
                 <small style="font-size: 0.4em;"><kbd>urmeaza in curand</kbd></small>
               </h3>
@@ -139,7 +136,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image">
+            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
               <a href="http://omulmodern.ro/" target="_blank">
                 <div data-tilt class="thumbnail rounded">
                   <img class="img-fluid" src="img/projectOmulModern.png" />
@@ -153,7 +150,7 @@
         <!-- Olteanu Claudiu -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text">
+            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">CV / Resume Template </h3>
               <div>
                 <p class="mb-4">
@@ -173,7 +170,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image">
+            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
               <a href="https://www.olteanuclaudiu.ro/" target="_blank">
                 <div data-tilt class="thumbnail rounded">
                   <img class="img-fluid" src="img/projectOlteanuClaudiu.png" />
@@ -188,7 +185,7 @@
         <!-- Sebastian Moldovan -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text">
+            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">Website de prezentare</h3>
               <div>
                 <p class="mb-4">
@@ -208,7 +205,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image">
+            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
               <a href="http://sebastianmoldovan.com/" target="_blank">
                 <div data-tilt class="thumbnail rounded">
                   <img class="img-fluid" src="img/projectSebastianMoldovan.png" />
@@ -220,8 +217,7 @@
         <!-- /END Project -->
       </div>
     </div>
-  </section>
-  <!-- /END Projects Section -->
+  </section> <!-- /END Projects Section -->
 
   <!-- **** Contact Section **** -->
   <section id="contact">
@@ -230,13 +226,13 @@
         Contact
       </h2>
       <div class="grid-for-contact">
-        <div class="contact-wrapper">
+        <div class="contact-wrapper wow animate__animated animate__slideInUp">
           <p class="contact-wrapper__text">
             Trimite-mi un mesaj
           </p>
           <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:contact.omulmodern@gmail.com">Trimite</a>
         </div>
-        <div class="contact-wrapper">
+        <div class="contact-wrapper wow animate__animated animate__slideInUp">
           <p class="contact-wrapper__text">
             Abonează-te
           </p>
