--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <div class="about-wrapper-btn">
             <span class="d-flex mt-3">
               <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
-                Descopera o noua lume
+                Un buton
               </a>
             </span>
           </div>
