--- a/index.html
+++ b/index.html
@@ -219,6 +219,38 @@
     </div>
   </section> <!-- /END Projects Section -->
 
+  <section id="banner" class="footer navbar-static-bottom">
+    <div class="container">
+      <a href="#top" class="back-to-top">
+        <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
+      </a>
+      <div class="social-links">
+        <a href="#!" target="_blank">
+          <i class="fa fa-twitter fa-inverse"></i>
+        </a>
+        <a href="#!" target="_blank">
+          <i class="fa fa-codepen fa-inverse"></i>
+        </a>
+        <a href="#!" target="_blank">
+          <i class="fa fa-linkedin fa-inverse"></i>
+        </a>
+        <a href="#!" target="_blank">
+          <i class="fa fa-github fa-inverse"></i>
+        </a>
+      </div>
+
+      <hr />
+
+      <!-- If you give me some credit, will be huge for me :) -->
+      <p class="footer__text">
+        © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a><br> and
+        customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
+        </a>
+      </p>
+
+    </div>
+  </section>
+
   <!-- **** Contact Section **** -->
   <section id="contact">
     <div class="container">
@@ -240,8 +272,7 @@
         </div>
       </div>
     </div>
-  </section>
-  <!-- /END Contact Section -->
+  </section> <!-- /END Contact Section -->
 
   <!-- **** Footer Section **** -->
   <footer class="footer navbar-static-bottom">
@@ -274,8 +305,7 @@
       </p>
 
     </div>
-  </footer>
-  <!-- /END Footer Section -->
+  </footer> <!-- /END Footer Section -->
 
 
 
