added two languages

--- a/ro-index.html
+++ b/ro-index.html
@@ -52,13 +52,17 @@
   <!-- **** Hero Section **** -->
   <div id="hero" class="jumbotron">
     <div class="container">
+      <ul class="lang-nav">
+        <li><a href="ro-index.html"><img src="./img/ro.png" alt=""></a></li>
+        <li><a href="eng-index.html"><img src="./img/uk.png" alt=""></a></a></li>
+      </ul>
       <h1 class="hero-title" class="load-hidden">
         Mă numesc <span class="text-color-main">Tudor Marian</span>
         <br />
         Sunt <span class="typed"></span>
       </h1>
       <p class="hero-cta" class="load-hidden">
-        <a class="cta-btn cta-btn--hero main-button js-scroll-to-about wow animate__animated animate__backInDown" href="#about">Află mai multe</a>
+        <a class="cta-btn cta-btn--hero main-button js-scroll-to-about wow animate__backInDown" href="#about">Află mai multe</a>
       </p>
     </div>
   </div> <!-- /END Hero Section -->
@@ -66,19 +70,19 @@
   <!-- **** About Section **** -->
   <section id="about" class="js-about">
     <div class="container">
-      <h2 class="section-title wow animate__animated animate__fadeIn">
+      <h2 class="section-title wow animate__fadeIn">
         Despre mine
       </h2>
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg wow animate__animated animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
+            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
               alt="Profile Image" />
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text wow animate__animated animate__pulse">
+            <p class="about-wrapper__info-text wow animate__pulse">
               Îmi doresc să schimbăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, și să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
             </p>
           </div>
@@ -86,7 +90,7 @@
 
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text wow animate__animated animate__pulse">
+            <p class="about-wrapper__info-text wow animate__pulse">
               Susțin <a class="tvp-refference" href="#"><kbd class="hover-pointer">Economia Bazată pe Resurse<kbd></a> propusă de <a class="tvp-refference" href="/#"><kbd class="hover-pointer">Proiectul Venus</kbd></a> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <a class="tvp-refference" href="#"><kbd class="hover-pointer">Jacque Fresco</kbd></a> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
             </p>
           </div>
@@ -118,7 +122,7 @@
         <!-- Omul Modern -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">Omul Modern <br>
                 <small style="font-size: 0.4em;"><kbd>urmeaza in curand</kbd></small>
               </h3>
@@ -136,7 +140,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
+            <div class="project-wrapper__image wow animate__fadeIn">
               <a href="http://omulmodern.ro/" target="_blank">
                 <div data-tilt class="thumbnail rounded">
                   <img class="img-fluid" src="img/projectOmulModern.png" />
@@ -150,7 +154,7 @@
         <!-- Olteanu Claudiu -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">CV / Resume Template </h3>
               <div>
                 <p class="mb-4">
@@ -170,7 +174,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
+            <div class="project-wrapper__image wow animate__fadeIn">
               <a href="https://www.olteanuclaudiu.ro/" target="_blank">
                 <div data-tilt class="thumbnail rounded">
                   <img class="img-fluid" src="img/projectOlteanuClaudiu.png" />
@@ -185,7 +189,7 @@
         <!-- Sebastian Moldovan -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">Website de prezentare</h3>
               <div>
                 <p class="mb-4">
@@ -205,7 +209,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
+            <div class="project-wrapper__image wow animate__fadeIn">
               <a href="http://sebastianmoldovan.com/" target="_blank">
                 <div data-tilt class="thumbnail rounded">
                   <img class="img-fluid" src="img/projectSebastianMoldovan.png" />
@@ -219,6 +223,7 @@
     </div>
   </section> <!-- /END Projects Section -->
 
+  <!-- Banner Section -->
   <section id="banner" class="footer navbar-static-bottom">
     <div class="container">
       <a href="#top" class="back-to-top">
@@ -254,17 +259,17 @@
   <!-- **** Contact Section **** -->
   <section id="contact">
     <div class="container">
-      <h2 class="section-title wow animate__animated animate__fadeIn">
+      <h2 class="section-title wow animate__fadeIn">
         Contact
       </h2>
       <div class="grid-for-contact">
-        <div class="contact-wrapper wow animate__animated animate__slideInUp">
+        <div class="contact-wrapper wow animate__slideInUp">
           <p class="contact-wrapper__text">
             Trimite-mi un mesaj
           </p>
           <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:contact.omulmodern@gmail.com">Trimite</a>
         </div>
-        <div class="contact-wrapper wow animate__animated animate__slideInUp">
+        <div class="contact-wrapper wow animate__slideInUp">
           <p class="contact-wrapper__text">
             Abonează-te
           </p>
