--- a/eng-index.html
+++ b/eng-index.html
@@ -1,9 +1,3 @@
-<!--
-  Hello!
-  -
-  This is a customized Portofolio theme designed by Tudor Marian by combining Simplefolio from github and Port theme bought from themeforest
-  -
--->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -70,13 +64,13 @@
   <!-- **** About Section **** -->
   <section id="about" class="js-about">
     <div class="container">
-      <h2 class="section-title uk-an animate__animated animate__fadeIn">
+      <h2 class="section-title wow animate__animated animate__fadeIn">
         About Me
       </h2>
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg uk-an animate__animated animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
+            <img class="img-fluid rounded shadow-lg wow animate__animated animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
               alt="Profile Image" />
           </div>
         </div>
