restructureing html code

--- a/eng-index.html
+++ b/eng-index.html
@@ -64,7 +64,7 @@
   <!-- **** About Section **** -->
   <section id="about" class="js-about">
     <div class="container">
-      <h2 class="section-title wow animate__animated animate__fadeIn">
+      <h2 class="section-title">
         About Me
       </h2>
       <div class="row about-wrapper">
@@ -76,7 +76,7 @@
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text wow animate__animated animate__pulse">
+            <p class="about-wrapper__info-text">
               Îmi doresc să schimbăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, și să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
             </p>
           </div>
@@ -84,7 +84,7 @@
 
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text wow animate__animated animate__pulse">
+            <p class="about-wrapper__info-text">
               Susțin <a class="tvp-refference" href="#"><kbd class="hover-pointer">Economia Bazată pe Resurse<kbd></a> propusă de <a class="tvp-refference" href="/#"><kbd class="hover-pointer">Proiectul Venus</kbd></a> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <a class="tvp-refference" href="#"><kbd class="hover-pointer">Jacque Fresco</kbd></a> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
             </p>
           </div>
@@ -116,7 +116,7 @@
         <!-- Omul Modern -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
+            <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">Omul Modern<br>
                 <small style="font-size: 0.4em;"><kbd>coming soon</kbd></small>
               </h3>
@@ -134,12 +134,10 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
-              <a href="http://omulmodern.ro/" target="_blank">
-                <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="img/projectOmulModern.png" />
-                </div>
-              </a>
+            <div class="project-wrapper__image">
+              <div class="thumbnail rounded">
+                <img class="img-fluid" src="img/projectOmulModern.png" />
+              </div>
             </div>
           </div>
         </div>
@@ -148,7 +146,7 @@
         <!-- Olteanu Claudiu -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
+            <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">CV / Resume Template </h3>
               <div>
                 <p class="mb-4">
@@ -168,12 +166,10 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
-              <a href="https://www.olteanuclaudiu.ro/" target="_blank">
-                <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="img/projectOlteanuClaudiu.png" />
-                </div>
-              </a>
+            <div class="project-wrapper__image">
+              <div class="thumbnail rounded">
+                <img class="img-fluid" src="img/projectOlteanuClaudiu.png" />
+              </div>
             </div>
           </div>
         </div>
@@ -183,7 +179,7 @@
         <!-- Sebastian Moldovan -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text wow animate__animated animate__fadeInLeft">
+            <div class="project-wrapper__text">
               <h3 class="project-wrapper__text-title">I build awesome websites</h3>
               <div>
                 <p class="mb-4">
@@ -203,12 +199,10 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image wow animate__animated animate__fadeIn">
-              <a href="http://sebastianmoldovan.com/" target="_blank">
-                <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="img/projectSebastianMoldovan.png" />
-                </div>
-              </a>
+            <div class="project-wrapper__image">
+              <div class="thumbnail rounded">
+                <img class="img-fluid" src="img/projectSebastianMoldovan.png" />
+              </div>
             </div>
           </div>
         </div>
@@ -253,17 +247,17 @@
   <!-- **** Contact Section **** -->
   <section id="contact">
     <div class="container">
-      <h2 class="section-title wow animate__animated animate__fadeIn">
+      <h2 class="section-title">
         Contact
       </h2>
       <div class="grid-for-contact">
-        <div class="contact-wrapper wow animate__animated animate__slideInUp">
+        <div class="contact-wrapper">
           <p class="contact-wrapper__text">
             Message me
           </p>
           <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:contact.omulmodern@gmail.com">Send</a>
         </div>
-        <div class="contact-wrapper wow animate__animated animate__slideInUp">
+        <div class="contact-wrapper">
           <p class="contact-wrapper__text">
             Follow me
           </p>
