Im happy with two languages

--- a/en.index.html
+++ b/en.index.html
@@ -46,9 +46,8 @@
   <!-- **** Hero Section **** -->
   <div id="hero" class="jumbotron">
     <div class="container">
-      <ul class="lang-nav">
-        <li><a href="ro-index.html"><img src="./img/ro.png" alt=""></a></li>
-        <li><a href="eng-index.html"><img src="./img/uk.png" alt=""></a></a></li>
+      <ul class="ro-flag">
+        <li><a href="index.html"><img src="./img/ro.png" alt=""></a></li>
       </ul>
       <h1 class="hero-title" class="load-hidden">
         My name is <span class="text-color-main">Tudor Marian</span>
@@ -297,6 +296,10 @@
         </a>
       </p>
 
+      <ul class="lang-nav">
+        <li><a href="index.html"><img src="./img/ro.png" alt=""></a></li>
+        <li><a href="en.index.html"><img src="./img/uk.png" alt=""></a></a></li>
+      </ul>
     </div>
   </footer> <!-- /END Footer Section -->
 
