--- a/index.html
+++ b/index.html
@@ -52,10 +52,7 @@
   <!-- **** Hero Section **** -->
   <div id="hero" class="jumbotron">
     <div class="container">
-      <ul class="lang-nav">
-        <li><a href="ro-index.html"><img src="./img/ro.png" alt=""></a></li>
-        <li><a href="eng-index.html"><img src="./img/uk.png" alt=""></a></a></li>
-      </ul>
+      
       <h1 class="hero-title" class="load-hidden">
         Mă numesc <span class="text-color-main">Tudor Marian</span>
         <br />
@@ -281,9 +278,6 @@
       </a>
       <div class="social-links">
         <a href="#!" target="_blank">
-          <i class="fa fa-twitter fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
           <i class="fa fa-codepen fa-inverse"></i>
         </a>
         <a href="#!" target="_blank">
@@ -302,6 +296,11 @@
         customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
         </a>
       </p>
+
+      <ul class="lang-nav">
+        <li><a href="index.html"><img src="./img/ro.png" alt=""></a></li>
+        <li><a href="en.index.html"><img src="./img/uk.png" alt=""></a></a></li>
+      </ul>
 
     </div>
   </footer> <!-- /END Footer Section -->
