--- a/en.index.html
+++ b/en.index.html
@@ -47,7 +47,7 @@
   <div id="hero" class="jumbotron">
     <div class="container">
       <ul class="ro-flag">
-        <li><a href="index.html"><img src="./img/ro.png" alt=""></a></li>
+        <li><a href="index.html"><img src="./img/ro.png" alt=""><span>RO</span></a></li>
       </ul>
       <h1 class="hero-title" class="load-hidden">
         My name is <span class="text-color-main">Tudor Marian</span>
