--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text wow animate__pulse">
-              Îmi doresc să schimbăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, și să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
+              Am un vis! Să transformăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, și să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
             </p>
           </div>
         </div>
