improving the footer

--- a/en.index.html
+++ b/en.index.html
@@ -291,8 +291,8 @@
 
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
-        © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a><br> and
-        customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
+        © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a><br>
+        Edited &amp; customized with <i class="fas fa-heart"></i> by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
         </a>
       </p>
 
