added youtube icon to abuot button

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper-btn">
             <span class="d-flex mt-3">
-              <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
-                Un buton
+              <a class="cta-btn cta-btn--resume" href="#!">
+                Un buton <i class="fab fa-youtube"></i>
               </a>
             </span>
           </div>
@@ -220,30 +220,6 @@
       <a href="#top" class="back-to-top">
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
-      <div class="social-links">
-        <a href="#!" target="_blank">
-          <i class="fa fa-twitter fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
-          <i class="fa fa-codepen fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
-          <i class="fa fa-linkedin fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
-          <i class="fa fa-github fa-inverse"></i>
-        </a>
-      </div>
-
-      <hr />
-
-      <!-- If you give me some credit, will be huge for me :) -->
-      <p class="footer__text">
-        © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a><br> and
-        customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
-        </a>
-      </p>
-
     </div>
   </section>
 
@@ -293,7 +269,7 @@
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
         © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a><br>
-        Edited &amp; customized with <i class="fas fa-heart"></i> by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
+        Edited &amp; customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
         </a>
       </p>
 
@@ -329,6 +305,9 @@
 
   <!-- JQuerry -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- MAGNIFIC POPUP -->
+  <script src="https://cdn.jsdelivr.net/npm/magnific-popup@1.1.0/dist/jquery.magnific-popup.min.js"></script>
 
     <!-- Script pt TILT JS | Project Images Animation -->
   <script src="./js/tilt.jquery.js"></script>
