--- a/en.index.html
+++ b/en.index.html
@@ -93,7 +93,7 @@
           <div class="about-wrapper-btn">
             <span class="d-flex mt-3">
               <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
-                Button
+                Button <i class="fab fa-youtube"></i>
               </a>
             </span>
           </div>
@@ -292,7 +292,7 @@
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
         © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a><br>
-        Edited &amp; customized with <i class="fas fa-heart"></i> by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
+        Edited &amp; customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
         </a>
       </p>
 
