Made magnific popup Work Awesome

--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
   <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 
-
+  <link rel="stylesheet" href="./style/magnific-popup.css">
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style/main.css">
-
-  <!-- ScrollReveal -->
 
 </head>
 
@@ -49,6 +47,7 @@
 
   <div id="particles-js"></div>
   <div id="top"></div>
+
   <!-- **** Hero Section **** -->
   <div id="hero" class="jumbotron">
     <div class="container">
@@ -96,8 +95,8 @@
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper-btn">
             <span class="d-flex mt-3">
-              <a class="cta-btn cta-btn--resume" href="#!">
-                Un buton <i class="fab fa-youtube"></i>
+              <a class="cta-btn cta-btn--resume video" href="https://www.youtube.com/watch?v=rvDKTRgoSS8">
+                Play Video <i class="fab fa-youtube"></i>
               </a>
             </span>
           </div>
@@ -297,22 +296,26 @@
 
   <!-- JS pentru Boostrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
 
   <!-- JQuerry -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+  </script>
 
-  <!-- MAGNIFIC POPUP -->
-  <script src="https://cdn.jsdelivr.net/npm/magnific-popup@1.1.0/dist/jquery.magnific-popup.min.js"></script>
+  <!-- Magnific Popup -->
+  <script src="./js/jquery.magnific-popup.min.js"></script>
 
-    <!-- Script pt TILT JS | Project Images Animation -->
+  <!-- Script pt TILT JS | Project Images Animation -->
   <script src="./js/tilt.jquery.js"></script>
-
-  
 
   <!-- Custom JS -->
   <script src="./js/index.js"></script>
