--- a/en.index.html
+++ b/en.index.html
@@ -48,9 +48,9 @@
         <li><a href="index.html"><img src="./img/ro.png" alt=""><span>RO</span></a></li>
       </ul>
       <h1 class="hero-title" class="load-hidden">
-        My name is <span class="text-color-main">Tudor Marian</span>
+        My name is <span class="text-color-main">Tudor Marian</span> <br>
+        I am <span class="typed"></span>
         <br />
-        I am<span class=""> web developer and dreamer</span>
       </h1>
       <p class="hero-cta" class="load-hidden">
         <a class="cta-btn cta-btn--hero main-button js-scroll-to-about wow animate__animated animate__backInDown" href="#about">Find out more</a>
@@ -214,29 +214,6 @@
       <a href="#top" class="back-to-top">
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
-      <div class="social-links">
-        <a href="#!" target="_blank">
-          <i class="fa fa-twitter fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
-          <i class="fa fa-codepen fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
-          <i class="fa fa-linkedin fa-inverse"></i>
-        </a>
-        <a href="#!" target="_blank">
-          <i class="fa fa-github fa-inverse"></i>
-        </a>
-      </div>
-
-      <hr />
-
-      <!-- If you give me some credit, will be huge for me :) -->
-      <p class="footer__text">
-        © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a><br> and
-        customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
-        </a>
-      </p>
 
     </div>
   </section>
@@ -339,30 +316,15 @@
   <script src="./js/tilt.jquery.js"></script>
 
   <!-- Custom JS -->
-  <script src="./js/index.js"></script>
-
+  <script src="./js/en.index.js"></script>
   <script>
-    $(document).ready(function () {
-      $(".video").magnificPopup({
-        type: "iframe",
-        iframe: {
-          markup: '<div class="mfp-iframe-scaler">' +
-                    '<div class="mfp-close"></div>' +
-                    '<iframe class="mfp-iframe" frameborder="0" allowfullscreen></iframe>' +
-                  '</div>',
-          
-          patterns: {
-            youtube: {
-              index: 'youtube.com/',
-              id: 'v=',
-
-              src: 'https://www.youtube.com/embed/%id%?autoplay=1'
-            },
-          },
-
-          srcAction: 'iframe_src',
-        }
-      })
+    wow = new WOW({
+      boxClass: 'wow',      // default
+      animateClass: 'animate__animated', // default
+      offset: 350,          // default
+      mobile: true,       // default
+      live: false,        // default
+      resetAnimation: true,
     });
   </script>
 
