--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <!-- **** Footer Section **** -->
   <footer class="footer navbar-static-bottom">
     <div class="container">
-      <a href="#top" class="back-to-top">
+      <a href="#top" class="back-to-top js-scroll-to-top">
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
       <div class="social-links">
