--- a/en.index.html
+++ b/en.index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="en-version">
 
 <head>
   <meta charset="utf-8" />
@@ -244,7 +244,7 @@
   <!-- **** Footer Section **** -->
   <footer class="footer navbar-static-bottom">
     <div class="container">
-      <a href="#top" class="back-to-top">
+      <a href="#top" class="back-to-top js-scroll-to-top">
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
       <div class="social-links">
