All animations working perfectly

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text wow animate__pulse">
+            <p class="about-wrapper__info-text wow animate__fadeIn">
               Am un vis! Să transformăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, și să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
             </p>
           </div>
@@ -86,7 +86,7 @@
 
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text wow animate__pulse">
+            <p class="about-wrapper__info-text wow animate__fadeIn">
               Susțin <a class="tvp-refference" href="#"><kbd class="hover-pointer">Economia Bazată pe Resurse<kbd></a> propusă de <a class="tvp-refference" href="/#"><kbd class="hover-pointer">Proiectul Venus</kbd></a> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <a class="tvp-refference" href="#"><kbd class="hover-pointer">Jacque Fresco</kbd></a> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
             </p>
           </div>
@@ -101,7 +101,6 @@
             </span>
           </div>
         </div>
-
       </div>
     </div>
   </section> <!-- /END About Section -->
@@ -110,7 +109,7 @@
   <section id="projects">
     <div class="container">
       <div class="project-wrapper">
-        <h2 class="section-title dark-blue-text wow animate__animated animate__fadeIn">
+        <h2 class="section-title dark-blue-text wow animate__fadeIn">
           Proiecte
         </h2>
 
