--- a/en.index.html
+++ b/en.index.html
@@ -61,19 +61,19 @@
   <!-- **** About Section **** -->
   <section id="about" class="js-about">
     <div class="container">
-      <h2 class="section-title">
+      <h2 class="section-title wow animate__fadeIn">
         About Me
       </h2>
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg wow animate__animated animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
+            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
               alt="Profile Image" />
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text">
+            <p class="about-wrapper__info-text wow animate__fadeIn">
               Îmi doresc să schimbăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, și să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
             </p>
           </div>
@@ -81,7 +81,7 @@
 
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
-            <p class="about-wrapper__info-text">
+            <p class="about-wrapper__info-text wow animate__fadeIn">
               Susțin <a class="tvp-refference" href="#"><kbd class="hover-pointer">Economia Bazată pe Resurse<kbd></a> propusă de <a class="tvp-refference" href="/#"><kbd class="hover-pointer">Proiectul Venus</kbd></a> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <a class="tvp-refference" href="#"><kbd class="hover-pointer">Jacque Fresco</kbd></a> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
             </p>
           </div>
@@ -105,7 +105,7 @@
   <section id="projects">
     <div class="container">
       <div class="project-wrapper">
-        <h2 class="section-title dark-blue-text wow animate__animated animate__fadeIn">
+        <h2 class="section-title dark-blue-text wow animate__fadeIn">
           My Work
         </h2>
 
@@ -113,7 +113,7 @@
         <!-- Omul Modern -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">Omul Modern<br>
                 <small style="font-size: 0.4em;"><kbd>coming soon</kbd></small>
               </h3>
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image">
+            <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
                 <img class="img-fluid" src="img/projectOmulModern.png" />
               </div>
@@ -143,7 +143,7 @@
         <!-- Olteanu Claudiu -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">CV / Resume Template </h3>
               <div>
                 <p class="mb-4">
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image">
+            <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
                 <img class="img-fluid" src="img/projectOlteanuClaudiu.png" />
               </div>
@@ -176,7 +176,7 @@
         <!-- Sebastian Moldovan -->
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text">
+            <div class="project-wrapper__text wow animate__fadeInLeft">
               <h3 class="project-wrapper__text-title">I build awesome websites</h3>
               <div>
                 <p class="mb-4">
@@ -196,7 +196,7 @@
             </div>
           </div>
           <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image">
+            <div class="project-wrapper__image wow animate__fadeIn">
               <div class="thumbnail rounded">
                 <img class="img-fluid" src="img/projectSebastianMoldovan.png" />
               </div>
@@ -221,17 +221,17 @@
   <!-- **** Contact Section **** -->
   <section id="contact">
     <div class="container">
-      <h2 class="section-title">
+      <h2 class="section-title wow animate__fadeIn">
         Contact
       </h2>
       <div class="grid-for-contact">
-        <div class="contact-wrapper">
+        <div class="contact-wrapper wow animate__slideInUp">
           <p class="contact-wrapper__text">
             Message me
           </p>
           <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:contact.omulmodern@gmail.com">Send</a>
         </div>
-        <div class="contact-wrapper">
+        <div class="contact-wrapper wow animate__slideInUp">
           <p class="contact-wrapper__text">
             Follow me
           </p>
