deleted the links in description

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text wow animate__fadeIn">
-              Susțin <a class="tvp-refference" href="#"><kbd class="hover-pointer">Economia Bazată pe Resurse<kbd></a> propusă de <a class="tvp-refference" href="/#"><kbd class="hover-pointer">Proiectul Venus</kbd></a> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <a class="tvp-refference" href="#"><kbd class="hover-pointer">Jacque Fresco</kbd></a> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
+              Susțin <kbd>Economia Bazată pe Resurse</kbd> propusă de <kbd>Proiectul Venus</kbd> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <kbd>Jacque Fresco</kbd> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
             </p>
           </div>
         </div>
@@ -95,7 +95,7 @@
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper-btn">
             <span class="d-flex mt-3">
-              <a class="cta-btn cta-btn--resume video" href="https://www.youtube.com/watch?v=rvDKTRgoSS8">
+              <a class="cta-btn cta-btn--resume video" href="https://www.youtube.com/watch?v=FEnaiohD0Y4">
                 Play Video <i class="fab fa-youtube"></i>
               </a>
             </span>
