--- a/en.index.html
+++ b/en.index.html
@@ -74,7 +74,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text wow animate__fadeIn">
-              Îmi doresc să schimbăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, și să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
+              I have a dream! To transform the world. I wish that we the people all over the world take conscious steps, as a whole, to rearrange society and the way we live on earth so that it works for the benefit and well-being of all people everywhere. It is possible and even inevitable to build a completely new form of society, truly civilized and intelligent, in which money does not exist and everything is free and open.
             </p>
           </div>
         </div>
@@ -82,7 +82,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text wow animate__fadeIn">
-              Susțin <kbd>Economia Bazată pe Resurse</kbd> propusă de <kbd>Proiectul Venus</kbd> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <kbd>Jacque Fresco</kbd> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
+              I support the <kbd>Resource Based Economy</kbd> proposed by <kbd>The Venus Project</kbd> founded by the extraordinary mind and vast life experience of Jacque Fresco. Researching the lifelong work of <kbd> Jacque Fresco</kbd> I was inspired, and so, out of a desire to help make the world a better place, I began to learn to code by creating websites to spread awareness about a new way of thinking and a world of free access.
             </p>
           </div>
         </div>
@@ -266,8 +266,8 @@
 
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
-        © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a><br>
-        Edited &amp; customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
+        © 2020 - Template built by <a href="index.html"><kbd>Tudor Marian</kbd></a><br>
+        Inspired from <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a>
         </a>
       </p>
 
