--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <div class="grid-for-contact">
         <div class="contact-wrapper wow animate__slideInUp">
           <p class="contact-wrapper__text">
-            Trimite-mi un mesaj
+            Mesaj
           </p>
           <a target="_blank" class="cta-btn cta-btn--resume" href="mailto:contact.omulmodern@gmail.com">Trimite</a>
         </div>
@@ -266,8 +266,8 @@
 
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
-        © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a><br>
-        Edited &amp; customized by <a href="omulmodern.ro"><kbd>Tudor Marian</kbd></a>
+        © 2020 - Temă creată de <a href="index.html"><kbd>Tudor Marian</kbd></a><br>
+        Inspirat de <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a>
         </a>
       </p>
 
