created banners for about and contact section

--- a/en.index.html
+++ b/en.index.html
@@ -101,6 +101,13 @@
     </div>
   </section> <!-- /END About Section -->
 
+  <!-- Banner Section -->
+  <section id="about-banner" class="banner">
+    <div class="container">
+
+    </div>
+  </section>
+
   <!-- **** Projects Section **** -->
   <section id="projects">
     <div class="container">
@@ -209,7 +216,7 @@
   </section> <!-- /END Projects Section -->
 
   <!-- Banner Section -->
-  <section id="banner" class="footer navbar-static-bottom">
+  <section id="contact-banner" class="banner">
     <div class="container">
       <a href="#top" class="back-to-top">
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
