added quote slides in about-banner

--- a/en.index.html
+++ b/en.index.html
@@ -104,7 +104,27 @@
   <!-- Banner Section -->
   <section id="about-banner" class="banner">
     <div class="container">
-
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+          </div>
+          <div class="carousel-item">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+          </div>
+          <div class="carousel-item">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
   </section>
 
