--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Change this image of you want another Favicon -->
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
   <!-- Put here your site title -->
   <title>Tudor Marian | Web Developer</title>
@@ -28,13 +28,15 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;400;600&family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;400;600&family=Montserrat:wght@100;400;700&display=swap"
+    rel="stylesheet">
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/f800768fd5.js" crossorigin="anonymous"></script>
 
   <!-- Animate.css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
 
   <link rel="stylesheet" href="./style/magnific-popup.css">
 
@@ -51,14 +53,15 @@
   <!-- **** Hero Section **** -->
   <div id="hero" class="jumbotron">
     <div class="container">
-      
+
       <h1 class="hero-title" class="load-hidden">
         Mă numesc <span class="text-color-main">Tudor Marian</span>
         <br />
         Sunt <span class="typed"></span>
       </h1>
       <p class="hero-cta" class="load-hidden">
-        <a class="cta-btn cta-btn--hero main-button js-scroll-to-about wow animate__backInDown" href="#about">Află mai multe</a>
+        <a class="cta-btn cta-btn--hero main-button js-scroll-to-about wow animate__backInDown" href="#about">Află mai
+          multe</a>
       </p>
     </div>
   </div> <!-- /END Hero Section -->
@@ -72,14 +75,18 @@
       <div class="row about-wrapper">
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper__image">
-            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" height="auto" width="150px" src="img/profile-smaller.png"
-              alt="Profile Image" />
+            <img class="img-fluid rounded shadow-lg wow animate__fadeInUp" height="auto" width="150px"
+              src="img/profile-smaller.png" alt="Profile Image" />
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text wow animate__fadeIn">
-              Am un vis! Să transformăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un întreg, să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este liber și gratuit.
+              Am un vis! Să transformăm lumea. Îmi doresc ca noi oamenii de pretutindeni să facem pași conștienți, ca un
+              întreg, să rearanjăm societatea și modul în care trăim pe pământ astfel încât să funcționeze în beneficiul
+              și pentru bunăstarea tuturor oamenilor de oriunde. Este posibil și chiar inevitabil să construim o formă
+              complet nouă de societate, cu adevărat civilizată și inteligentă, în care banii nu există iar totul este
+              liber și gratuit.
             </p>
           </div>
         </div>
@@ -87,7 +94,11 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text wow animate__fadeIn">
-              Susțin <kbd>Economia Bazată pe Resurse</kbd> propusă de <kbd>Proiectul Venus</kbd> fondat de extraordinara minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <kbd>Jacque Fresco</kbd> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod de gândire și o lume a accesului liber.
+              Susțin <kbd>Economia Bazată pe Resurse</kbd> propusă de <kbd>Proiectul Venus</kbd> fondat de extraordinara
+              minte și vasta experiență de viață a lui Jacque Fresco. Cercetând munca de-o viață a lui <kbd>Jacque
+                Fresco</kbd> am fost inspirat, și astfel, din dorința de a contribui la a face lumea un loc mai bun, am
+              început să învăț să programez prin a crea website-uri pentru a răspândi conștientizare despre un nou mod
+              de gândire și o lume a accesului liber.
             </p>
           </div>
         </div>
@@ -105,10 +116,30 @@
     </div>
   </section> <!-- /END About Section -->
 
-  <!-- Banner Section -->
+  <!-- About-Banner Section -->
   <section id="about-banner" class="banner">
     <div class="container">
-
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+          </div>
+          <div class="carousel-item">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+          </div>
+          <div class="carousel-item">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
     </div>
   </section>
 
@@ -130,7 +161,8 @@
               </h3>
               <div>
                 <p class="mb-4">
-                  Omul Modern este o platformă educatională, având scopul de a educa și orienta gândirea omului către valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
+                  Omul Modern este o platformă educatională, având scopul de a educa și orienta gândirea omului către
+                  valori mai avansate și mai umane pentru a ne îndrepta către o civilizație cu adevarat inteligentă.
                 </p>
               </div>
               <a target="_blank" class="cta-btn projects-btn" href="http://omulmodern.ro/">
@@ -219,7 +251,7 @@
     </div>
   </section> <!-- /END Projects Section -->
 
-  <!-- Banner Section -->
+  <!-- Contact-Banner Section -->
   <section id="contact-banner" class="banner">
     <div class="container">
       <a href="#top" class="back-to-top">
@@ -294,7 +326,7 @@
   <!-- Script pt TYPED JS -->
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 
-    <!-- Script pt PARTICLES JS -->
+  <!-- Script pt PARTICLES JS -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
   <!-- WOW JS -->
@@ -303,15 +335,15 @@
   <!-- JS pentru Boostrap -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
+    </script>
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
+    </script>
 
   <!-- JQuerry -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
