Added the about banner section cool stuff

--- a/en.index.html
+++ b/en.index.html
@@ -235,7 +235,7 @@
     </div>
   </section> <!-- /END Projects Section -->
 
-  <!-- Banner Section -->
+  <!--Contact-Banner Section -->
   <section id="contact-banner" class="banner">
     <div class="container">
       <a href="#top" class="back-to-top">
@@ -293,8 +293,8 @@
 
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
-        © 2020 - Template built by <a href="index.html"><kbd>Tudor Marian</kbd></a><br>
-        Inspired from <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a>
+        © 2020 - Template built by <a href="index.html"><kbd class="creators">Tudor Marian</kbd></a><br>
+        Inspired from <a href="https://github.com/cobidev" target="_blank"><kbd class="creators">Jacobo Martínez</kbd></a>
         </a>
       </p>
 
