--- a/index.html
+++ b/index.html
@@ -122,13 +122,22 @@
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+            <blockquote>
+              <p>"Sunt multidisciplinar, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</p>
+              <cite>Tudor Marian</cite>
+            </blockquote>
           </div>
           <div class="carousel-item">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+            <blockquote>
+              <p>"Nu spun ca voi schimba lumea,<br> dar voi declanșa gândirea care o va face."</p>
+              <cite>Tudor Marian</cite>
+            </blockquote>
           </div>
           <div class="carousel-item">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+            <blockquote>
+            <p>"Dacă suficient de mulți oameni lucrează la ceea ce propun, cred că putem schimba lumea."</p>
+            <cite>Jacque Fresco</cite>
+            </blockquote>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -305,8 +314,8 @@
 
       <!-- If you give me some credit, will be huge for me :) -->
       <p class="footer__text">
-        © 2020 - Temă creată de <a href="index.html"><kbd>Tudor Marian</kbd></a><br>
-        Inspirat de <a href="https://github.com/cobidev" target="_blank"><kbd>Jacobo Martínez</kbd></a>
+        © 2020 - Temă creată de <a href="index.html"><kbd class="creators">Tudor Marian</kbd></a><br>
+        Inspirat de <a href="https://github.com/cobidev" target="_blank"><kbd class="creators">Jacobo Martínez</kbd></a>
         </a>
       </p>
 
