updating eng version to match ro version

--- a/en.index.html
+++ b/en.index.html
@@ -107,13 +107,22 @@
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+            <blockquote>
+              <p>"Sunt multidisciplinar, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</p>
+              <cite>Tudor Marian</cite>
+            </blockquote>
           </div>
           <div class="carousel-item">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+            <blockquote>
+              <p>"Nu spun ca voi schimba lumea,<br> dar voi declanșa gândirea care o va face."</p>
+              <cite>Tudor Marian</cite>
+            </blockquote>
           </div>
           <div class="carousel-item">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, minus et. Totam cum praesentium nemo eaque. Laboriosam, debitis consectetur facere enim quas consequuntur quos architecto nemo. Sapiente facere deserunt fugiat?</p>
+            <blockquote>
+            <p>"Dacă suficient de mulți oameni lucrează la ceea ce propun, cred că putem schimba lumea."</p>
+            <cite>Jacque Fresco</cite>
+            </blockquote>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
