added Flags on hero section

--- a/en.index.html
+++ b/en.index.html
@@ -90,7 +90,7 @@
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper-btn">
             <span class="d-flex mt-3">
-              <a class="cta-btn cta-btn--resume video" href="https://www.youtube.com/watch?v=FEnaiohD0Y4">
+              <a class="cta-btn cta-btn--resume video" href="https://www.youtube.com/watch?v=oucu-AAcGSA">
                 Play Video <i class="fab fa-youtube"></i>
               </a>
             </span>
@@ -108,19 +108,19 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <blockquote>
-              <p>"Sunt multidisciplinar, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</p>
+              <p>"I am website creator, I work to better myself and the rest of humanity."</p>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
-              <p>"Nu spun ca voi schimba lumea,<br> dar voi declanșa gândirea care o va face."</p>
+              <p>"I'm not saying I will change the world but I will spark the thinking that will."</p>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
           <div class="carousel-item">
             <blockquote>
-            <p>"Dacă suficient de mulți oameni lucrează la ceea ce propun, cred că putem schimba lumea."</p>
+            <p>"If enough people work at what I talk about, I believe we can change the world."</p>
             <cite>Jacque Fresco</cite>
             </blockquote>
           </div>
