--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
   <!-- **** Hero Section **** -->
   <div id="hero" class="jumbotron">
     <div class="container">
-
+      <ul class="ro-flag">
+        <li><a href="en.index.html"><img src="./img/uk.png" alt=""><span>En</span></a></li>
+      </ul>
       <h1 class="hero-title" class="load-hidden">
         Mă numesc <span class="text-color-main">Tudor Marian</span>
         <br />
@@ -106,7 +108,7 @@
         <div class="col-md-12 col-sm-12">
           <div class="about-wrapper-btn">
             <span class="d-flex mt-3">
-              <a class="cta-btn cta-btn--resume video" href="https://www.youtube.com/watch?v=FEnaiohD0Y4">
+              <a class="cta-btn cta-btn--resume video" href="https://www.youtube.com/watch?v=oucu-AAcGSA">
                 Play Video <i class="fab fa-youtube"></i>
               </a>
             </span>
@@ -123,7 +125,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <blockquote>
-              <p>"Sunt multidisciplinar, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</p>
+              <p>"Sunt creator de site-uri, lucrez pentru a mă îmbunătăți pe mine și restul umanității."</p>
               <cite>Tudor Marian</cite>
             </blockquote>
           </div>
